# emailgrid

./: .gitignore  Cargo.toml
src/: emailing.rs  lib.rs  utils.rs
